erDiagram
    USERS ||--o{ OAUTH_ACCOUNTS : "has"
    USERS ||--o{ REFRESH_TOKENS : "issues"
    USERS ||--o{ AUDIT_LOG : "actor"
    USERS ||--o{ SUPPLIERS : "creates"

    USERS {
        uuid id PK
        citext email UK
        string hashed_password
        string role "admin/ai_developer/end_user"
        bool is_active
        bool is_verified
        timestamptz last_login_at
    }
    OAUTH_ACCOUNTS {
        uuid id PK
        uuid user_id FK
        string provider "google"
        string provider_subject
        text access_token_encrypted
    }
    REFRESH_TOKENS {
        uuid id PK
        uuid user_id FK
        string token_hash
        timestamptz expires_at
        timestamptz revoked_at
        uuid replaced_by_id FK
        inet ip
    }
    AUDIT_LOG {
        uuid id PK
        uuid actor_id FK
        string action
        string target_type
        string target_id
        jsonb audit_metadata
        inet ip
        timestamptz occurred_at
    }
    SUPPLIERS {
        uuid id PK
        citext name
        string slug UK
        bool is_global
        uuid created_by_user_id FK
    }
